Fixed footer z-index

--- a/src/component/index.scss
+++ b/src/component/index.scss
@@ -87,7 +87,7 @@ img{
     bottom: 0;
     width: 100%;
     text-align: center;
-
+    z-index: 2;
 }
 
 .footer a{
